[package]
name = "spallet-finance"
version = "2.0.0"
authors = ["libaozhong <libaozhong@xforceplus.com>"]
edition = "2018"
license = "Apache-2.0"



[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
pallet-balances = { version = "2.0.0", path = "../frame/balances" }
codec = { package = "parity-scale-codec", version = "1.3.4" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
frame-support = { version = "2.0.0", path = "../frame/support" }
frame-system = { version = "2.0.0", path = "../frame/system" }

[dependencies.safe-mix]
default-features = false
version = '1.0.1'

[dependencies.sp-std]
default-features = false
version = "2.0.0"
path = "../../primitives/std"

[dev-dependencies.sp-core]
default-features = false
version = "2.0.0"
path = "../../primitives/core"

[dev-dependencies.sp-io]
default-features = false
version = "2.0.0"
path = "../../primitives/io"

[dependencies.sp-runtime]
default-features = false
version = "2.0.0"
path = "../../primitives/runtime"

[dependencies.pallet-token]
default-features = false
path = '../frame/token'


[dependencies.pallet-swaps]
default-features = false
path = '../frame/swaps'


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
	'frame-system/std',
    'sp-io/std',
    'sp-runtime/std',
    'pallet-balances/std',
    'pallet-token/std',
    'pallet-swaps/std'
]
