[package]
name = "pallet-fungible-assets"
version = "2.0.0"
authors = ["hammeWang <dsw0602@foxmail.com> "]
edition = "2018"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "2.0.0", default-features = false, path = "../support" }
frame-system = { version = "2.0.0", default-features = false, path = "../system" }

[dev-dependencies]
sp-io = { version = "2.0.0", path = "../../primitives/io" }
sp-core = { version = "2.0.0", path = "../../primitives/core" }

[features]
default = ["std"]
std =[
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
