[package]
name = "pallet-token"
version = "2.0.0"
authors = ["libaozhong <libaozhong@xforceplus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pallet-balances]
default-features = false
path="../balances"
package = 'pallet-balances'
version = '2.0.1'

[dependencies.codec]
default-features = false
package = 'parity-scale-codec'
version = '1.3.5'

[dependencies.frame-support]
default-features = false
path = "../support"
version = '2.0.0'

[dependencies.safe-mix]
default-features = false
version = '1.0.1'

[dependencies.frame-system]
default-features = false
version = "2.0.0"
path = "../system"


[dependencies.sp-std]
default-features = false
version = "2.0.0"
path = "../../primitives/std"

[dev-dependencies.sp-core]
default-features = false
version = "2.0.0"
path = "../../primitives/core"

[dev-dependencies.sp-io]
default-features = false
version = "2.0.0"
path = "../../primitives/io"

[dependencies.sp-runtime]
default-features = false
version = "2.0.0"
path = "../../primitives/runtime"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
	'frame-system/std',
    'sp-runtime/std',
    'pallet-balances/std'
]
