[package]
name = "pallet-token-rpc"
version = "2.0.0"
authors = ["libaozhong <libaozhong@xforceplus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { version = "2.0.0",  path = "../../../primitives/std" }
pallet-token-rpc-runtime-api={version = "2.0.0",  path="./runtime-api" }
codec = { package = "parity-scale-codec", version = "1.3.1" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
sp-core = { version = "2.0.0", path = "../../../primitives/core" }
sp-rpc = { version = "2.0.0", path = "../../../primitives/rpc" }
serde = { version = "1.0.101", features = ["derive"] }
sp-runtime = { version = "2.0.0", path = "../../../primitives/runtime" }
sp-api = { version = "2.0.0", path = "../../../primitives/api" }
sp-blockchain = { version = "2.0.0", path = "../../../primitives/blockchain" }